# smallishtalk

./: .gitignore  Cargo.toml  JIT.md  Makefile  README.md  SPEC.md  UI.md  run-st-tests.sh  treaty.json
.github/workflows/: ci.yml
bench/: gst_driver.st  history.csv  run.sh  run_jit.sh  vm_compile_driver.st  vm_driver.st  vm_jit_driver.st
bench/results/: arith_loop.counters.txt  block_value.counters.txt  dictionary.counters.txt  exceptions.counters.txt  ordered_collection.counters.txt  process_pingpong.counters.txt  self_compile.counters.txt  self_compile.profile.txt  send_loop.counters.txt  string_build.counters.txt
bench/workloads/: arith_loop.st  block_value.st  dictionary.st  exceptions.st  ordered_collection.st  process_pingpong.st  send_loop.st  string_build.st
corpus/: 001_arithmetic.st  002_strings.expected  002_strings.st  003_booleans.expected  003_booleans.st  004_loops.expected  004_loops.st  005_arrays.expected  005_arrays.st  006_ordered.expected  006_ordered.st  007_dictionaries.expected  007_dictionaries.st  008_streams.expected  008_streams.st  009_blocks.expected  009_blocks.st  010_nlr.expected  010_nlr.st  011_exceptions_basic.expected  011_exceptions_basic.st  012_exceptions_nested.expected  012_exceptions_nested.st  013_retry.st  014_ensure.expected  014_ensure.st  015_dnu.expected  015_dnu.st  016_processes.expected  016_processes.st  017_delay.st  018_recursion.expected  018_recursion.st  019_terminate.expected  019_terminate.st  020_unicode.expected  020_unicode.st  021_inline_loops.expected  021_inline_loops.st  022_sort.expected  (+1 more)
docs/: codegen-plan.md  jit-status.md  perf-findings.md  profiling-plan.md  profiling.md
scripts/: run-ui.sh
src/: asm.rs  counters.rs  fixture.rs  gc.rs  heap.rs  host_ui.rs  image.rs  interp.rs  jit.rs  lib.rs  main.rs  png.rs  prims.rs  profile.rs  treaty.rs  value.rs  vm.rs
st/compiler/: AST.st  (+10 more)
tests/: amd64_cross_test.rs  asm_test.rs  bootstrap_test.rs  cache_test.rs  closure_test.rs  compact_test.rs  corpus_test.rs  counters_test.rs  cross_encoder_test.rs  exception_test.rs  gc_test.rs  gst_image_test.rs  heap_test.rs  image_test.rs  interp_test.rs  jit_corpus_test.rs  jit_image_test.rs  jit_m0_test.rs  live_install_test.rs  phase5_test.rs  portability_guard_test.rs  prims_test.rs  process_test.rs  profiler_image_test.rs  profiler_test.rs  st_suite.rs  stress_test.rs  treaty_test.rs  ui_browser.rs  ui_gfx.rs  ui_headless.rs  ui_reflection.rs  ui_widgets.rs  ui_wm.rs  value_test.rs
(+69 files in other folders)
