[package]
name = "smallishtalk"
version = "0.1.0"
edition = "2024"

[lib]
name = "smallishtalk"
path = "src/lib.rs"

[[bin]]
name = "smallishtalk"
path = "src/main.rs"

[features]
# The gated hot-path counter tier (per-opcode histogram, send counts,
# poll-gap distribution). MEASURED (plan §3 validation, 2026-07-02): the
# runtime gate — one predictable branch in the dispatch loop, even when
# off — costs ~10% on the self-compile workload, so per the plan's decision
# rule the gate lives at compile time: default builds carry no gate at all;
# instruction-mix measurements use `--features vm-counters`. The always-on
# counter tier measures as free (self-compile time is unchanged from the
# pre-instrumentation binary).
default = []
vm-counters = []

# Line tables in release builds so `perf` / flamegraphs symbolize the
# interpreter (docs/profiling.md); does not change codegen.
[profile.release]
debug = "line-tables-only"

[dependencies]
# The JIT code cache (mmap/mprotect W^X): the only external dependency of
# the VM proper.
libc = "0.2"
